--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
   },
   "homepage": "https://github.com/btholt/complete-intro-to-react-v4#readme",
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.6",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
     "eslint": "^5.3.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-import": "^2.13.0",
@@ -29,6 +34,7 @@
     "prettier": "^1.14.2"
   },
   "dependencies": {
+    "@reach/router": "^1.2.1",
     "petfinder-client": "^1.0.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2"
