--- a/package.json
+++ b/package.json
@@ -34,8 +34,11 @@
     "prettier": "^1.14.2"
   },
   "dependencies": {
+    "@reach/router": "^1.1.1",
+    "emotion": "^9.2.6",
     "petfinder-client": "^1.0.2",
     "react": "^16.4.2",
-    "react-dom": "^16.4.2"
+    "react-dom": "^16.4.2",
+    "react-emotion": "^9.2.6"
   }
 }
