--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
   },
   "dependencies": {
     "@reach/router": "^1.1.1",
+    "emotion": "^9.2.6",
     "petfinder-client": "^0.0.3",
     "react": "^16.4.2",
-    "react-dom": "^16.4.2"
+    "react-dom": "^16.4.2",
+    "react-emotion": "^9.2.6"
   }
 }
