--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
     "@reach/router": "^1.1.1",
     "petfinder-client": "^0.0.3",
     "react": "^16.4.2",
-    "react-dom": "^16.4.2"
+    "react-dom": "^16.4.2",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0"
   }
 }
