--- a/package.json
+++ b/package.json
@@ -34,8 +34,12 @@
     "prettier": "^1.14.2"
   },
   "dependencies": {
+    "@reach/router": "^1.2.1",
     "petfinder-client": "^1.0.2",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2"
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0"
   }
 }
