--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "",
     "format": "prettier --write \"src/**/*.{js,jsx}\"",
     "lint": "eslint \"src/**/*.{js,jsx}\" --quiet",
-    "dev": "parcel src/index.html"
+    "dev": "parcel src/index.html",
+    "build": "parcel build src/index.html"
   },
   "repository": {
     "type": "git",
@@ -34,7 +35,12 @@
     "prettier": "^1.14.2"
   },
   "dependencies": {
+    "@reach/router": "^1.1.1",
     "petfinder-client": "^1.0.2",
+    "preact": "^8.3.1",
+    "preact-compat": "^3.18.3",
+    "preact-context": "^1.0.3",
+    "preact-router": "^2.6.1",
     "react": "^16.4.2",
     "react-dom": "^16.4.2"
   }
