--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "adopt-me",
   "version": "1.0.0",
   "description": "An app to teach you to write React",
-  "main": "src/App.js",
+  "main": "src/App.tsx",
   "scripts": {
     "test": "",
-    "format": "prettier --write \"src/**/*.{js,jsx}\"",
-    "lint": "eslint \"src/**/*.{js,jsx}\" --quiet",
-    "dev": "parcel src/index.html"
+    "format": "prettier --write \"src/**/*.{js,jsx,tsx}\"",
+    "lint": "tslint --project .",
+    "dev": "parcel src/index.html",
+    "typecheck": "tsc --noEmit"
   },
   "repository": {
     "type": "git",
@@ -20,18 +21,19 @@
   },
   "homepage": "https://github.com/btholt/complete-intro-to-react-v4#readme",
   "devDependencies": {
+    "@types/reach__router": "^1.0.1",
+    "@types/react": "^16.4.11",
+    "@types/react-dom": "^16.0.7",
     "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.6",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "eslint": "^5.3.0",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-import": "^2.13.0",
-    "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-react": "^7.10.0",
     "parcel-bundler": "^1.11.0",
-    "prettier": "^1.14.2"
+    "prettier": "^1.14.2",
+    "tslint": "^5.11.0",
+    "tslint-config-prettier": "^1.15.0",
+    "tslint-react": "^3.6.0",
+    "typescript": "^3.0.1"
   },
   "dependencies": {
     "@reach/router": "^1.2.1",
