--- a/package.json
+++ b/package.json
@@ -19,15 +19,16 @@
     "react-twitter-widgets": "^1.7.1",
     "shuffle-array": "^1.0.1"
   },
-  "keywords": ["gatsby"],
+  "keywords": [
+    "gatsby"
+  ],
   "license": "CC-BY-NC-4.0",
   "main": "n/a",
   "scripts": {
     "build": "gatsby build --prefix-paths",
     "deploy": "gatsby build --prefix-paths && gh-pages -d ./public -b gh-pages",
     "develop": "gatsby develop",
-    "format":
-      "prettier --trailing-comma es5 --no-semi --single-quote --write \"src/**/*.js\""
+    "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"src/**/*.js\""
   },
   "devDependencies": {
     "eslint": "^4.14.0",
